<resources>
    <string name="app_name">ThinkItApp</string>
    <string name="cd_button">Play button</string>
    <string name="cd_logo" translatable="false">Logo</string>
    <string name="exit_sure">Are you sure do you want to exit?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_back">Go back</string>
    <string name="ca_flag" translatable="false">Català</string>
    <string name="es_flag" translatable="false">Español</string>
    <string name="it_flag" translatable="false">Italiano</string>
    <string name="uk_flag" translatable="false">English</string>
    <string name="next">Next!</string>
    <string name="developersinfo">Developed by Jordi Solà and Alejandro Berdún</string>
    <string name="switchinfo">App developed for Erasmus Switch Project</string>
    <string name="gameover_sure">Do you want to stop game and force \'Game Over\'?</string>
    <string name="gameover_resume">Resume</string>
    <string name="no_lives">No lives!</string>
    <string name="score">Score</string>
    <string name="exit_menu">Go to main manu</string>
    <string name="game_over">Game over</string>
    <string name="final_score">Final score</string>
    <string name="hint_enter_name">Enter your name</string>
    <string name="level">Level</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="tutorial_msg">It seems like it\'s the first time you play. Do you want to try a tutorial?</string>
    <string name="dialog_timeout_on_pause">Time ran out while the game was paused. This is a race, so time won\'t stop not even then!</string>
    <string name="lastlife">Last life!</string>
    <string name="hint_lifelines">Remember you can use lifelines!</string>
    <string name="app_language_title">Language</string>
    <string name="gameover_over" translatable="false">Game over</string>
    <string name="timeout">Time out!</string>
    <string name="app_score_title">Ranking</string>
    <string name="app_help_title">Help</string>
    <string name="dialog_clear_scores">Do you want to clear the score list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="guardar_puntuaci_n">¿Guardar puntuación?</string>
    <string name="no_existen_puntuaciones_todav_a">No existen puntuaciones todavía</string>
    <string name="posici_n">Posición</string>
    <string name="nombre">Nombre</string>
    <string name="puntuaci_n">Puntuación</string>
    <string name="we_are_students_of_puig_castellar">We are students of Puig Castellar</string>
    <string name="template_for_help_items_developing" translatable="false">Template for help items, developing...</string>

    <string name="help_credits">Créditos</string>
    <string name="help_menu">Menú principal</string>
    <string name="help_goals">Objetivo del juego</string>
    <string name="help_bonus">Ayudas y bonificaciones</string>
    <string name="help_ranking">Ranking de puntuaciones</string>
    <string name="help_language">Cambiar idioma</string>
    <string name="next_tutorial">Next</string>
    <string name="dialog_result_exit_withoutsave">¿Salir sin guardar la puntuación?</string>
    <string name="help_play_button">Pulsa éste boton para jugar</string>
    <string name="help_ranking_button">Pulsa éste boton para ver el ranking de puntuaciones</string>
    <string name="help_language_button">Pulsa éste boton para ver los idiomas disponibles para la aplicación</string>
    <string name="help_help_button">Pulsa éste boton para ver la ayuda</string>
    <string name="help_sound_button">Desactiva o activa el sonido</string>
    <string name="help_exit_button">Pulsa éste botón para cerrar la aplicación</string>
    <string name="help_game_description">ThinkitApp es un juego de matemáticas basado en sencillas operaciones matemáticas, que fomenta la capacidad de cálculo mental. El objetivo del juego es conseguir la máxima puntuación posible. Para lograrlo, contesta correctamente todas las operaciones que puedas.</string>
    <string name="help_difficult_description">La dificultad aumenta progresivamente</string>
    <string name="help_incorrect_answer_description">Cada respuesta incorrecta restará una vida y restará 50 puntos a la puntuación total</string>
    <string name="help_end_game_description">Si el tiempo finaliza, perderás una vida. La partida finaliza al perder tu última vida</string>
    <string name="help_next_section_bonus">Consulta las bonificaciones para lograr una puntuación mas alta, en la sección ayudas y bonificaciones</string>
    <string name="help_bonus_lifeline_50_description">Éste comodin reduce a la mitad las respuestas posibles. Utilizable sólo 1 vez en cada partida</string>
    <string name="help_bonus_lifeline_next_description">Éste otro comodin permite pasar a la siguiente operación. Utilizable sólo 1 vez en cada partida</string>
    <string name="help_bonus_next_operation_description">Puedes ver la operación siguiente debajo de la operación a responder</string>
    <string name="help_title">Ayudas</string>
    <string name="help_bonus_title_bonus">Bonificaciones</string>
    <string name="help_bonus_question_score_description">Cada respuesta correcta añade 100 a la puntuación total</string>
    <string name="help_bonus_time_score_description">Acertar una operación en menos de 10 segundos, sumará más puntos y obtendrás más tiempo</string>
    <string name="help_ranking_description2">El ranking ordena de forma descendente las puntuaciones guardadas, indicando en primera posición la puntuación más alta</string>
    <string name="help_ranking_remove">Puedes eliminar una puntuación pulsando la papelera</string>
    <string name="help_ranking_removeall">Elimina todas las puntuaciones al pulsar éste botón</string>
    <string name="help_language_description">Puedes cambiar el idioma del juego tocando la bandera correspondiente al idioma deseado</string>
    <string name="attribution">Atribuciones</string>
    <string name="help_game_description2">El objetivo del juego es conseguir la máxima puntuación posible. Para lograrlo, completa correctamente todas las operaciones que puedas.</string>
    <string name="help_game_description3">sdfssdffsd</string>
    <string name="help_bonus_introduction">sdsdsdsd</string>
    <string name="help_ranking_description">Cuando se acaba la partida, tienes la posibilidad de introducir tu nombre y guardar la puntuación. Al guardar, se mostrará inmediatamente el ránking de puntuaciones, con tu entrada resaltada. Esta sección es accesible también desde el menú principal.</string>
    <string name="help_attributions">Música del juego: \"Jazzy Frenchy\" - Bensound.com</string>
    <string name="result_characters">caracteres restantes</string>
    <string name="result_name_required">Se requiere un nombre para guardar la puntuación</string>
    <string name="repeat_tutorial">Repetir tutorial</string>
    <string name="tutorial_welcome1">¡Bienvenidos a Think It App!\\n\\nEste es un juego basado en sencillas operaciones matemáticas que deberás completar.</string>
    <string name="tutorial_welcome2">Piensa en el juego como si fuera una carrera, no hay pausas. Si dejas la app en segundo plano, ¡el tiempo sigue corriendo!</string>
    <string name="tutorial_main_operation">Esta es la operación principal.\\nEl juego trata de completar la operación con el número que falta.</string>
    <string name="tutorial_next_operation">Esta es la siguiente operación.\\n Cuando completes la actual, esta será el objetivo. ¡Échale un vistazo para ganar unos segundos!</string>
    <string name="tutorial_answers">Aquí están los botones con las posibles opciones. ¡Piensa bien antes de elegir una!</string>
    <string name="tutorial_timer">No tardes mucho en pensar, porque hay un cronómetro en tu contra. ¡Vigila el tiempo!</string>
    <string name="tutorial_score">Según tu respuesta, subirá o bajará la puntuación. Si aciertas, sumarás puntos. Si fallas, restarás. Y si aciertas rápido, obtendrás una bonificación.</string>
    <string name="tutorial_score2">El objetivo final del juego es obtener la máxima puntuación en el ranking. ¡Intenta llegar lo más lejos posible!</string>
    <string name="lives">Cada vez que falles una operación, perderás una vida. Tienes 3 vidas, así que cuídalas bien.</string>
    <string name="tutorial_levels">Por cada 10 preguntas correctas, subirás de nivel. El juego es infinito, y a mayor nivel, operaciones más difíciles.</string>
    <string name="hardness">Además, al subir de nivel, las respuestas posibles irán aumentando hasta un máximo de 8.</string>
    <string name="tutorial_try_answer">¡Pruébalo! Pulsa en la respuesta correcta.\\n(Pista: es 2)</string>
    <string name="tutorial_complete_operation1">¡Correcto! La operación se ha completado. Ahora tendrás un escaso segundo antes de que aparezca la siguiente operación.</string>
    <string name="tutorial_complete_operation2">¡Aprovecha para echarle un vistazo antes de que el cronómetro se reanude!</string>
    <string name="tutorial_bonus1">Cuando aciertas rápido, se suma un tiempo extra de bonificación, acumulable hasta 59 segundos.</string>
    <string name="tutorial_bonus2">También se han sumado 100 puntos por acertar y una puntuación extra por acertar rápido.</string>
    <string name="tutorial_lifelines1">En caso de duda, tienes dos comodines: el comodín del 50% y el comodín de omitir operación.</string>
    <string name="tutorial_lifelines2">El comodín del 50% elimina la mitad de las opciones y el comodín de omitir operación pasa a la siguiente operación como si se hubiera acertado.</string>
    <string name="tutorial_lifelines3">¡Prueba a usar el comodín del 50%!</string>
    <string name="tutorial_lifelines4">Mucho más fácil, ¿no?</string>
    <string name="tutorial_gameover">Por último, si quieres rendirte puedes pulsar el botón de parar. NO es una pausa, esto desencadenará inmediatamente un \'Game Over\'.</string>
    <string name="tutorial_gameover2">Muchas gracias por tu atención. Ahora pulsa el botón de Stop, ¡y diviértete!</string>
    <string name="tutorial_end">¡Aquí empieza!</string>
    <string name="ok" />
    <string name="language_change_toast">"Language changed to: "</string>
</resources>
