<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:fillViewport="false">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lblListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/help_bonus_introduction" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/help_title"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/help_bonus_lifeline_50_description" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="5dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            app:srcCompat="@drawable/comodin1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/help_bonus_lifeline_next_description"
          />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="5dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            app:srcCompat="@drawable/comodin2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/help_bonus_next_operation_description"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"

            android:adjustViewBounds="true"
            android:layout_gravity="center"
            app:srcCompat="@drawable/next"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:text="@string/help_bonus_title_bonus"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/help_bonus_question_score_description"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            app:srcCompat="@drawable/correct_answer_score"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/help_bonus_time_score_description"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                app:srcCompat="@drawable/bonus_score"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_gravity="top"
                app:srcCompat="@drawable/more_time"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>